RESOLVED FIXED202976
[GTK][WPE] ASSERTION FAILED: blob in SQLiteStatement.cpp(163) : int WebCore::SQLiteStatement::bindBlob()
https://bugs.webkit.org/show_bug.cgi?id=202976
Summary [GTK][WPE] ASSERTION FAILED: blob in SQLiteStatement.cpp(163) : int WebCore::...
Carlos Garcia Campos
Reported 2019-10-15 00:37:51 PDT
This is because IconDatabases passes a nullptr blob to store emtpty icons. sqlite3_bind_blob() allows nullptr as blob, so we shouldn't assert.
Attachments
Patch (1.45 KB, patch)
2019-10-15 00:39 PDT, Carlos Garcia Campos
aperez: review+
Carlos Garcia Campos
Comment 1 2019-10-15 00:39:34 PDT
Carlos Garcia Campos
Comment 2 2019-10-16 03:57:32 PDT
Radar WebKit Bug Importer
Comment 3 2019-10-16 03:58:14 PDT
Note You need to log in before you can comment on or make changes to this bug.